backup_individuals/sjeng/use_undefined_identifier/c1/SwitchPromoted
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/SwitchPromoted/src/crazy.c:671:8: error: use of undeclared identifier 'dword_414610'
return dword_414610[piece]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/SwitchPromoted/src/obj/crazy.o] Error 1
